<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    android:background="@color/colorGrey2"
    android:orientation="vertical">

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarWithReturnButton"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white"/>

    <!-- Scrollview with data -->
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/svMainScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="20dip">

        <!-- scroll child -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Profile image-->
            <RelativeLayout
                android:layout_width="@dimen/edit_image_height"
                android:layout_height="@dimen/edit_image_height"
                android:layout_marginTop="20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_no_picture" />

                <ImageView
                    android:id="@+id/ivCam"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_camera"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <!-- Info Card -->
            <android.support.v7.widget.CardView
                android:id="@+id/cvInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:padding="@dimen/card_padding">

                <!-- Card child -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <!-- Name -->
                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:maxLines="1"
                        android:maxLength="20"
                        android:inputType="textCapWords"
                        android:hint="@string/edit_name_hint"/>

                    <!-- EMAIL -->
                    <RelativeLayout
                        android:id="@+id/rlEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <!-- Icon -->
                        <ImageView
                            android:id="@+id/ivMail"
                            android:layout_width="@dimen/info_icon"
                            android:layout_height="@dimen/info_icon"
                            android:background="@drawable/ic_email"
                            style="@style/IconContactInfo"/>

                        <!-- email -->
                        <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/ivMail"
                            android:layout_toEndOf="@id/ivMail"
                            android:layout_centerVertical="true"
                            android:layout_margin="5dp"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:maxLength="40"
                            android:hint="@string/edit_mail_hint"/>
                    </RelativeLayout>

                    <!-- BORN -->
                    <RelativeLayout
                        android:id="@+id/rlBorn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <!-- Icon -->
                        <ImageView
                            android:id="@+id/ivBorn"
                            android:layout_width="@dimen/info_icon"
                            android:layout_height="@dimen/info_icon"
                            android:background="@drawable/ic_calendar"
                            style="@style/IconContactInfo"/>

                        <!-- Born date -->
                        <EditText
                            android:id="@+id/etBorn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/ivBorn"
                            android:layout_toEndOf="@id/ivBorn"
                            android:layout_centerVertical="true"
                            android:layout_margin="5dp"
                            android:inputType="date"
                            android:maxLines="1"
                            android:maxLength="40"
                            android:hint="@string/edit_born_hint"
                            android:focusableInTouchMode="false" />
                    </RelativeLayout>

                    <!-- Bio -->
                    <RelativeLayout
                        android:id="@+id/rlBio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <!-- Icon -->
                        <ImageView
                            android:id="@+id/ivBio"
                            android:layout_width="@dimen/info_icon"
                            android:layout_height="@dimen/info_icon"
                            android:background="@drawable/ic_description"
                            style="@style/IconContactInfo"/>

                        <!-- Bio -->
                        <EditText
                            android:id="@+id/etBio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/ivBio"
                            android:layout_toEndOf="@id/ivBio"
                            android:layout_margin="5dp"
                            android:layout_centerVertical="true"
                            android:inputType="textCapSentences|textMultiLine"
                            android:hint="@string/edit_bio_hint"/>
                    </RelativeLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>